zellij-integration-tests/tests/snapshots/modes__enter_search_mode.snap
---
source: zellij-integration-tests/tests/modes.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
$ █
 ENTERING SEARCH TERM   ENTER  When done 
