zellij-integration-tests/tests/snapshots/modes__scrolling_inside_a_pane.snap
---
source: zellij-integration-tests/tests/modes.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
                           Pane #1                         │                           Pane #2          [ SCROLL: 2/2 ]
$                                                          │$ line1
                                                           │line2
                                                           │line3
                                                           │line4
                                                           │line5
                                                           │line6
                                                           │line7
                                                           │line8
                                                           │line9
                                                           │line10
                                                           │line11
                                                           │line12
                                                           │line13
                                                           │line14
                                                           │line15
                                                           │line16
                                                           │line17
                                                           │line18
                                                           │line19
                                                           │line20
                                                           │█ine21
 Ctrl + <s> SEARCH   s  Search  ↓|↑|PgDn|PgUp|d|u  Scroll  e  Edit  ENTER  Select  []  Commands 
