zellij-integration-tests/tests/snapshots/modes__switch_to_resize_mode.snap
---
source: zellij-integration-tests/tests/modes.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
$ █
 Ctrl + <n> RESIZE   +|-  Increase/Decrease  ←↓↑→  Increase  HJKL  Decrease  ENTER  Select 
