zellij-integration-tests/tests/snapshots/modes__switch_to_scroll_mode.snap
---
source: zellij-integration-tests/tests/modes.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
$ █
 Ctrl + <s> SEARCH   s  Search  ↓|↑|PgDn|PgUp|d|u  Scroll  e  Edit  ENTER  Select  []  Commands 
